# myHouse

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: deploy-pages.yml
app/data_trans/: __init__.py  ai.py  ai_config.py  base_parser.py  doc2json.py  excel2json.py  img2json.py  llm_client.py  pdf2json.py  trans.py
app/web/: main.py
app/web/static/: app.js  houses.js  styles.css
app/web/templates/: houses.html  index.html
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/public/: geo-app.js
frontend/src/: App.vue  style.css
frontend/src/assets/: geo.css
frontend/src/router/: index.js
frontend/src/views/: GeoView.vue  HomeView.vue  HousesView.vue  SettingsView.vue
scripts/: backend_entry.py  create_postgres_db.sh  generate_polygons.py  import_json_to_postgis.py  update_polygon_index.py
